<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerChats"
        android:background="@drawable/rounded_corners_bottom"
        android:backgroundTint="@color/quintoColor">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descriptionCloseSession"
            android:onClick="closeSession"
            android:backgroundTint="@color/quintoColor"
            app:icon="@drawable/ic_close_session_50"
            android:rotation="180"
            app:iconSize="30dp"
            app:iconTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_name_user"/>
        <TextView
            android:id="@+id/txt_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_close_session"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descriptionAdd"
        android:layout_margin="10dp"
        android:onClick="showAddPanel"
        android:backgroundTint="@color/quintoColor"
        app:icon="@drawable/ic_add_50"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panel_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_top"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/quintoColor"
            android:contentDescription="@string/contentDescriptionBtnDown"
            android:onClick="closePanel"
            app:icon="@drawable/ic_close_50"
            app:iconSize="30dp"
            app:iconTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/txt_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Name"
            android:background="@drawable/fields_rounded"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/secondaryColor"
            android:textColorHint="@color/secondaryColor"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btn_cancel"
            app:layout_constraintBottom_toTopOf="@id/btn_add_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/tertiaryColor"
            android:fontFamily="@font/poppins_medium"
            android:onClick="addEmailChat"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/txt_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>