<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pickerPhoto"
                android:layout_width="242dp"
                android:layout_height="181dp"
                android:contentDescription="@string/descriptionLogo"
                app:layout_constraintBottom_toTopOf="@id/formulary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_add_photo_150"
                tools:ignore="ImageContrastCheck" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/formulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pickerPhoto"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="Name"
                    android:background="@drawable/fields_rounded"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/txt_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="Email"
                    android:background="@drawable/fields_rounded"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/txt_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_name"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="Password"
                    android:background="@drawable/fields_rounded"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/txt_re_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_email"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/txt_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="Repeat password"
                    android:background="@drawable/fields_rounded"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/re_password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryColor"
                    android:textColorHint="@color/secondaryColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/btn_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_password"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/tertiaryColor"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/line_space"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_re_password"
                    app:rippleColor="@color/quarterColor"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />
                <LinearLayout
                    android:id="@+id/line_space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_signup"
                    app:layout_constraintBottom_toTopOf="@id/btn_login">
                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primaryColor"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/or"
                        android:textAlignment="center"
                        android:textColor="@color/primaryColor"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />
                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primaryColor"
                        android:layout_weight="1" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/quarterColor"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="toLogin"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_space"
                    app:rippleColor="@color/tertiaryColor"
                    tools:ignore="VisualLintButtonSize" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>